<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/lbl_home"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <item
            android:id="@+id/nav_material_separar"
            android:title="@string/lbl_material_separar" />
        <item
            android:id="@+id/nav_social"
            android:title="@string/lbl_social" />
        <item
            android:id="@+id/nav_porque_reciclar"
            android:title="@string/lbl_pev" />
        <item
            android:id="@+id/nav_residuo"
            android:title="Banco de Resíduos" />
        <item
            android:id="@+id/nav_multimiia"
            android:title="Multimídia (vídeos educativos)" />
        <item
            android:id="@+id/nav_ecokids"
            android:title="Eco Kids" />
        <item
            android:id="@+id/nav_jogos"
            android:title="Jogos" />
        <item
            android:id="@+id/nav_acoes"
            android:title="Ações Sociais" />
        <item
            android:id="@+id/nav_legislacao"
            android:title="Legislações" />
        <item
            android:id="@+id/nav_canaldenuncia"
            android:title="Canal de Denúcias" />
        <item
            android:id="@+id/nav_cadastre"
            android:title="@string/lbl_cadastre" />
        <item
            android:id="@+id/nav_sair"
            android:title="@string/lbl_sair" />
    </group>

    <item android:title="Comunicação">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/lbl_share"/>
            <item
                android:id="@+id/nav_rastrear"
                android:title="@string/lbl_rastrear"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/lbl_send" />
        </menu>
    </item>

</menu>
