<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coletaseletiva.recicle.coletaseletiva.activity_cadastro_ug"
    android:background="@color/clBackground"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_cabecalho">
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lnl_conteudo"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView3" >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lnl_camposGeral">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:id="@+id/lnl_nome">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:hint="@string/lbl_nome"
                            android:textColor="@color/clBlack"
                            android:textColorHint="@color/clBlack"
                            android:id="@+id/edtNome" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:id="@+id/lnl_cep" >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/edtCep"
                        android:hint="@string/lbl_cep"
                        android:textColor="@color/clBlack"
                        android:textColorHint="@color/clBlack"
                        android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:id="@+id/lnl_endereco" >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:hint="@string/lbl_endereco"
                        android:textColor="@color/clBlack"
                        android:textColorHint="@color/clBlack"
                        android:id="@+id/edtEndereco" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:id="@+id/lbl_numeroEnd"
                    android:focusableInTouchMode="false">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/edtNrEndereco"
                        android:hint="@string/lbl_nrEndereco"
                        android:textColor="@color/clBlack"
                        android:textColorHint="@color/clBlack"
                        android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:id="@+id/lbl_bairro"
                    android:focusableInTouchMode="false" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lbl_bairro"
                        android:paddingLeft="4dp"
                        android:paddingTop="8dp"
                        android:ems="5"
                        android:id="@+id/textViewBairro"
                        android:textColor="#00502b" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spBairro"
                        android:layout_weight="20"
                        android:layout_marginLeft="2dp"
                        android:layout_gravity="center_horizontal"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:id="@+id/lnl_celular"
                    android:focusableInTouchMode="false" >
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone|textPersonName"
                        android:ems="10"
                        android:textColor="@color/clBlack"
                        android:textColorHint="@color/clBlack"
                        android:hint="@string/lbl_celular"
                        android:id="@+id/edtCelular" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:id="@+id/lnl_email"
                    android:focusableInTouchMode="false" >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textWebEmailAddress|textPersonName"
                        android:ems="10"
                        android:textColor="@color/clBlack"
                        android:textColorHint="@color/clBlack"
                        android:hint="@string/lbl_email"
                        android:id="@+id/edtEmail" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:id="@+id/lnl_senha"
                    android:focusableInTouchMode="false" >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/edtSenha"
                        android:textColor="@color/clBlack"
                        android:textColorHint="@color/clBlack"
                        android:hint="@string/lbl_senha"
                        android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:id="@+id/lnl_categoria"
                    android:focusableInTouchMode="false" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lbl_unidadeGeradora"
                        android:id="@+id/textView4"
                        android:paddingLeft="4dp"
                        android:paddingTop="8dp"
                        android:ems="15"
                        android:textColor="#00502b"/>

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spColeta"
                        android:layout_weight="20"
                        android:layout_marginLeft="2dp"
                        android:spinnerMode="dropdown"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_gravity="center_horizontal"
                    android:background="#0c0001"/>

                <include
                    layout="@layout/line_separador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:id="@+id/lnl_localizacao"
                    android:focusableInTouchMode="false" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lbl_acesseLocalizacao"
                        android:id="@+id/textViewLocalizacao"
                        android:textAlignment="center"
                        android:textColor="@color/clBlack"
                        android:layout_gravity="center_horizontal" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_btn_mapa"
                        android:id="@+id/btn_mapa"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:textColor="@color/clGreen"
                        android:background="@color/clYellow"
                        android:onClick="startMapa"/>
                </LinearLayout>
                <include
                    layout="@layout/line_separador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_gravity="center_horizontal"
                    android:background="#0c0001"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnl_ropade">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_publicidade"
            android:id="@+id/textView12" />
    </LinearLayout>

</LinearLayout>
